--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!doctype html>
 <html lang="en">
   <head>
+  
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+    <title>GridStreak | Clean Energy Grid Stabilization</title>
+    <meta name="description" content="GridStreak pioneers carbon-negative energy storage by converting plastic waste into clean, scalable thermal energy for grid stability." />
+
+ 
+    <meta name="keywords" content="GridStreak, clean energy, thermal bricks, renewable energy storage, plastic-to-energy, grid stabilization, zero carbon, decarbonization" />
+
+    <meta name="author" content="GridStreak Team" />
+
+ 
+    <link rel="canonical" href="https://gridstreak.magical.africa/" />
+
+
+    <link rel="icon" href="/vite.svg" type="image/x-icon" />
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
-    <title>Grid Streak - Clean Energy</title>
+
+
+    <meta property="og:title" content="GridStreak | Zero-Carbon Grid Stability Starts Here" />
+    <meta property="og:description" content="Transforming plastic waste into clean energy for grid stability. Join the renewable revolution with GridStreak." />
+    <meta property="og:image" content="https://gridstreak.magical.africa/" />
+    <meta property="og:url" content="https://gridstreak.magical.africa/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="GridStreak | Clean Energy Grid Stabilization" />
+    <meta name="twitter:description" content="Revolutionizing clean energy through carbon-negative thermal storage systems." />
+    <meta name="twitter:image" content="https://www.gridstreak.com/twitter-preview.jpg" />
+    <meta name="twitter:site" content="@GridStreak" />
+
+    
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "GridStreak",
+        "url": "https://gridstreak.magical.africa/",
+        "logo": "https://www.gridstreak.com/logo.png",
+        "sameAs": [
+          "https://twitter.com/GridStreak",
+          "https://linkedin.com/company/gridstreak"
+        ]
+      }
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
