--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 
-    <title>GridStreak | Clean Energy Grid Stabilization</title>
+    <title>GridStreak - Powering a new clean future</title>
     <meta name="description" content="GridStreak pioneers carbon-negative energy storage by converting plastic waste into clean, scalable thermal energy for grid stability." />
 
  
