--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="canonical" href="https://gridstreak.magical.africa/" />
 
 
-    <link rel="icon" href="/vite.svg" type="image/x-icon" />
+    <link rel="icon" href="https://pub-eb8df8ce05ba4243b626e4a16b3fd69b.r2.dev/gridfav.png" type="image/png" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
 
