--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <title>GridStreak - Powering a new clean future</title>
-    <meta name="description" content="GridStreak pioneers carbon-negative energy storage by converting plastic waste into clean, scalable thermal energy for grid stability." />
+    <meta name="description" content="GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems." />
 
  
     <meta name="keywords" content="GridStreak, clean energy, thermal bricks, renewable energy storage, plastic-to-energy, grid stabilization, zero carbon, decarbonization" />
@@ -95,14 +95,14 @@
 
 
     <meta property="og:title" content="GridStreak | Zero-Carbon Grid Stability Starts Here" />
-    <meta property="og:description" content="Transforming plastic waste into clean energy for grid stability. Join the renewable revolution with GridStreak." />
+    <meta property="og:description" content="GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems." />
     <meta property="og:image" content="https://gridstreak.magical.africa/" />
     <meta property="og:url" content="https://gridstreak.magical.africa/" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="GridStreak | Clean Energy Grid Stabilization" />
-    <meta name="twitter:description" content="Revolutionizing clean energy through carbon-negative thermal storage systems." />
+    <meta name="twitter:description" content="GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems." />
     <meta name="twitter:image" content="https://www.gridstreak.com/twitter-preview.jpg" />
     <meta name="twitter:site" content="@GridStreak" />
 
@@ -112,14 +112,88 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "GridStreak",
+        "alternateName": "Grid Streak",
         "url": "https://gridstreak.magical.africa/",
-        "logo": "https://www.gridstreak.com/logo.png",
-        
+        "logo": "https://gridstreak.magical.africa/outLine-Orange@3x.png",
+        "description": "GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems.",
+        "foundingDate": "2023",
+        "founders": [
+          {
+            "@type": "Person",
+            "name": "GridStreak Team"
+          }
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+254 706 059 906",
+          "contactType": "Customer Service",
+          "email": "info@gridstreak.com"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chandaria Innovation Center",
+          "addressLocality": "Kenyatta University",
+          "addressCountry": "Kenya"
+        },
         "sameAs": [
           "https://x.com/GridStreak",
           "https://www.linkedin.com/company/grid-streak/?viewAsMember=true",
           "https://www.facebook.com/Gridstreak/"
-        ]
+        ],
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "https://gridstreak.magical.africa/search?q={search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
+    
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "GridStreak",
+        "url": "https://gridstreak.magical.africa/",
+        "description": "GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "GridStreak"
+        },
+        "mainEntity": {
+          "@type": "ItemList",
+          "itemListElement": [
+            {
+              "@type": "SiteNavigationElement",
+              "position": 1,
+              "name": "Home",
+              "url": "https://gridstreak.magical.africa/"
+            },
+            {
+              "@type": "SiteNavigationElement", 
+              "position": 2,
+              "name": "Solutions",
+              "url": "https://gridstreak.magical.africa/solutions"
+            },
+            {
+              "@type": "SiteNavigationElement",
+              "position": 3,
+              "name": "Partners", 
+              "url": "https://gridstreak.magical.africa/partners"
+            },
+            {
+              "@type": "SiteNavigationElement",
+              "position": 4,
+              "name": "Sustainability",
+              "url": "https://gridstreak.magical.africa/sustainability"
+            },
+            {
+              "@type": "SiteNavigationElement",
+              "position": 5,
+              "name": "Contact",
+              "url": "https://gridstreak.magical.africa/contact"
+            }
+          ]
+        }
       }
     </script>
 
