--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="GridStreak Team" />
 
  
-    <link rel="canonical" href="https://gridstreak.magical.africa/" />
+    <link rel="canonical" href="https://gridstreak.com/" />
 
 
     
@@ -96,8 +96,8 @@
 
     <meta property="og:title" content="GridStreak | Zero-Carbon Grid Stability Starts Here" />
     <meta property="og:description" content="GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems." />
-    <meta property="og:image" content="https://gridstreak.magical.africa/" />
-    <meta property="og:url" content="https://gridstreak.magical.africa/" />
+    <meta property="og:image" content="https://pub-4cadfb4c0ebc41a9bdd57aa74b8bd719.r2.dev/hero1.webp" />
+    <meta property="og:url" content="https://gridstreak.com/" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
@@ -113,8 +113,8 @@
         "@type": "Organization",
         "name": "GridStreak",
         "alternateName": "Grid Streak",
-        "url": "https://gridstreak.magical.africa/",
-        "logo": "https://gridstreak.magical.africa/outLine-Orange@3x.png",
+        "url": "https://gridstreak.com/",
+        "logo": "https://gridstreak.com/outLine-Orange@3x.png",
         "description": "GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems.",
         "foundingDate": "2023",
         "founders": [
@@ -142,7 +142,7 @@
         ],
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://gridstreak.magical.africa/search?q={search_term_string}",
+          "target": "https://gridstreak.com/search?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
       }
@@ -153,7 +153,7 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "GridStreak",
-        "url": "https://gridstreak.magical.africa/",
+        "url": "https://gridstreak.com/",
         "description": "GridStreak transforms plastic waste into clean thermal energy through a zero-waste process, powering portable sand brick batteries designed for scalable grid stabilization and community energy systems.",
         "publisher": {
           "@type": "Organization",
@@ -166,31 +166,31 @@
               "@type": "SiteNavigationElement",
               "position": 1,
               "name": "Home",
-              "url": "https://gridstreak.magical.africa/"
+              "url": "https://gridstreak.com/"
             },
             {
               "@type": "SiteNavigationElement", 
               "position": 2,
               "name": "Solutions",
-              "url": "https://gridstreak.magical.africa/solutions"
+              "url": "https://gridstreak.com/solutions"
             },
             {
               "@type": "SiteNavigationElement",
               "position": 3,
               "name": "Partners", 
-              "url": "https://gridstreak.magical.africa/partners"
+              "url": "https://gridstreak.com/partners"
             },
             {
               "@type": "SiteNavigationElement",
               "position": 4,
               "name": "Sustainability",
-              "url": "https://gridstreak.magical.africa/sustainability"
+              "url": "https://gridstreak.com/sustainability"
             },
             {
               "@type": "SiteNavigationElement",
               "position": 5,
               "name": "Contact",
-              "url": "https://gridstreak.magical.africa/contact"
+              "url": "https://gridstreak.com/contact"
             }
           ]
         }
